[workspace.package]
authors = ["FL03 <jo3mccain@icloud.com> (https://gitlab.com/FL03)"]
edition = "2021"
homepage = "https://github.com/FL03/decanter/wiki"
license = "Apache-2.0"
repository = "https://github.com/FL03/decanter"
version = "0.1.3"

[workspace]
default-members = [
    "decanter"
]
exclude = ["xtask"]
members = [
    "crypto",
    "decanter",
    "derive"
]

[workspace.dependencies]
serde = { features = ["derive"], version = "1" }
serde_json = "1"

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
panic = "unwind"
rpath = false
opt-level = 0
overflow-checks = true

[profile.release]
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
lto = false
panic = "unwind"
rpath = false
opt-level = "z"
overflow-checks = false
