[workspace.package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)"]
categories = []
description = "This crate implements basic cryptographic primitives native to the ecosystem"
edition = "2021"
homepage = "https://github.com/FL03/decanter/wiki"
keywords = ["cryptography", "hash"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/FL03/decanter"
version = "0.1.5"

[workspace]
default-members = [
    "decanter"
]
exclude = []
members = [
    "crypto",
    "decanter",
    "derive"
]

[workspace.dependencies]
anyhow = "1"
serde = { features = ["derive"], version = "1" }
serde_json = "1"
smart-default = "0.6"
strum = { features = ["derive"], version = "0.24" }


[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
panic = "unwind"
rpath = false
opt-level = 0
overflow-checks = true

[profile.release]
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
lto = false
panic = "unwind"
rpath = false
opt-level = "z"
overflow-checks = false
