[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://gitlab.com/FL03)"]
categories = []
description = "decanter-core implements a core set of cybersecurity testing tools"
edition = "2021"
homepage = "https://gitlab.com/crsty/crates/svl/-/wiki"
keywords = []
license = "MIT"
name = "decanter-core"
readme = "README.md"
repository = "https://gitlab.com/crsty/crates/decanter"
version = "0.1.0"

[lib]
bench = false
crate-type = ["cdylib", "rlib"]
test = true

[dependencies]
serde = { default-features = false, features = ["derive"], version = "1.0.145" }

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]