[package]
categories = []
description = "decanter-crypto"
keywords = ["crypto", "scsys"]
name = "decanter-crypto"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []

wasm = [
    "wasm-ext"
]
wasm-ext = [
    "ring/wasm32_c"
]

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]

[dependencies]
blake3 = "1.3"
ed25519 = { features = ["pkcs8", "serde_bytes"], version = "2.2.0" }
generic-array = "0.14"
hex = "0.4"
hex-literal = "0.3"
itertools = "0.10"
rand = "0.8"
ring = { features = ["wasm32_c"], version = "0.16" }
serde.workspace = true
serde_json.workspace = true
typenum = "1"

[dev-dependencies]
vrf = "0.2.4"

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
