[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "decanter"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = ["crypto"]
full = ["crypto", "derive"]

crypto = ["decanter-crypto/default"]
derive = ["decanter-derive"]

wasm = [
    "decanter-crypto/wasm",
    "wasm-ext"
]
wasm-ext = [
    "getrandom/js",
]

[lib]
bench = true
crate-type = ["cdylib", "rlib"]
test = true

[dependencies]
decanter-crypto = { features = ["wasm"], optional = true, path = "../crypto", version = "0.1.5" }
decanter-derive = { optional = true, path = "../derive", version = "0.1.5" }

blake3 = "1.3"
generic-array = "0.14"
getrandom = { features = ["js"], version = "0.2" }
rand = "0.8"
ring = "0.16"
serde.workspace = true
serde_json.workspace = true
smart-default.workspace = true
strum.workspace = true
typenum = "1"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
