[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "decanter"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = ["crypto"]
full = ["crypto", "derive"]

crypto = ["decanter-crypto/default"]
derive = ["decanter-derive"]

wasm = [
    "decanter-crypto/wasm",
    "wasm-ext"
]
wasm-ext = []

[lib]
bench = true
crate-type = ["cdylib", "rlib"]
doctest = false
test = true

[build-dependencies]

[dependencies]
decanter-crypto = { features = ["wasm"], optional = true, path = "../crypto", version = "0.1.5" }
decanter-derive = { optional = true, path = "../derive", version = "0.1.5" }

blake3 = "1.3"
generic-array = "0.14"
rand = "0.8"
serde.workspace = true
serde_json.workspace = true
smart-default.workspace = true
strum.workspace = true
typenum = "1"

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
