[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "decanter"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = [
    "crypto"
]

full = [
    "crypto", 
    "derive",
]

crypto = [
    "dep:decanter-crypto"
]

derive = [
    "dep:decanter-derive",
    "macros"
]

macros = [
    "dep:decanter-macros"
]

[lib]
bench = true
crate-type = ["cdylib", "rlib"]
doctest = false
test = true

[build-dependencies]

[dependencies]
decanter-crypto = { optional = true, path = "../crypto", version = "0.1.7" }
decanter-derive = { optional = true, path = "../derive", version = "0.1.7" }
decanter-macros = { optional = true, path = "../macros", version = "0.1.7" }

bincode = "1"
blake3 = "1.3"
generic-array = "1"
rand = "0.8"
serde.workspace = true
serde_json.workspace = true
smart-default.workspace = true
strum.workspace = true
typenum = "1"

[dev-dependencies]
hex-literal = "0.4"
lazy_static = "1.4"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown.dependencies]
getrandom = { features = ["js"], version = "0.2" }

[target.wasm32-wasi]
