[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)", "Scattered-Systems (https://github.com/scattered-systems)"]
categories = []
description = "This crate implements basic cryptographic primitives native to the ecosystem"
edition = "2021"
homepage = "https://github.com/FL03/decanter/wiki"
keywords = []
license = "Apache-2.0"
name = "decanter-derive"
repository = "https://github.com/FL03/decanter"
version = "0.1.2"

[lib]
proc-macro = true
test = false

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { features = ["full"], version = "1" }
serde = { features = ["derive"], version = "1"}
serde_json = "1"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
