[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)"]
categories = []
description = "Automata created for building trading applications"
edition = "2021"
homepage = "https://pzzld.eth.link/"
keywords = ["scsys"]
license = "MIT"
name = "rs-crypto-sdk"
version = "0.1.0"

[features]
default = []

[lib]
bench = false
crate-type = ["cdylib", "rlib"]
test = true

[dependencies]
glob = "0.3.0"
hyper = { features = ["full"], version = "0.14.20" }
reqwest = "0.11.11"
serde = { features = ["derive"], version = "1.0.143" }
serde_json = "1.0.83"
tokio = { features = ["full"], version = "1.20.1" }

[dependencies.scsys]
features = ["full"]
version = "0.1.12"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]